--- a/logFile.txt.1
+++ b/logFile.txt.1
@@ -1,16 +1,14 @@
-sep. 06, 2016 10:24:34 PM com.mycompany.ca1.server.EchoServer main
+Sep 08, 2016 2:23:13 PM com.mycompany.ca1.server.EchoServer main
 INFO: Starting the Server
-sep. 06, 2016 10:24:34 PM com.mycompany.ca1.server.EchoServer runServer
+Sep 08, 2016 2:23:13 PM com.mycompany.ca1.server.EchoServer runServer
 INFO: Server started. Listening on: 8080, bound to: localhost
-sep. 06, 2016 10:24:34 PM com.mycompany.ca1.server.EchoServer runServer
+Sep 08, 2016 2:23:13 PM com.mycompany.ca1.server.EchoServer runServer
 SEVERE: null
-java.net.BindException: Address already in use: JVM_Bind
-	at java.net.DualStackPlainSocketImpl.bind0(Native Method)
-	at java.net.DualStackPlainSocketImpl.socketBind(DualStackPlainSocketImpl.java:106)
+java.net.BindException: Address already in use
+	at java.net.PlainSocketImpl.socketBind(Native Method)
 	at java.net.AbstractPlainSocketImpl.bind(AbstractPlainSocketImpl.java:387)
-	at java.net.PlainSocketImpl.bind(PlainSocketImpl.java:190)
 	at java.net.ServerSocket.bind(ServerSocket.java:375)
 	at java.net.ServerSocket.bind(ServerSocket.java:329)
-	at com.mycompany.ca1.server.EchoServer.runServer(EchoServer.java:42)
-	at com.mycompany.ca1.server.EchoServer.main(EchoServer.java:64)
+	at com.mycompany.ca1.server.EchoServer.runServer(EchoServer.java:43)
+	at com.mycompany.ca1.server.EchoServer.main(EchoServer.java:65)
 
